--- a/META.yml
+++ b/META.yml
@@ -1,7 +1,7 @@
 --- #YAML:1.0
-name: Char::TIS620
+name: Char-TIS620
 abstract: Source code filter for TIS-620 script (Imitation JPerl)
-version: 0.97
+version: 0.99
 author:
   - INABA Hitoshi <ina@cpan.org>
 license: perl
